--- a/search/search-arbejdsopgave.html
+++ b/search/search-arbejdsopgave.html
@@ -108,12 +108,12 @@
                 <div class="container-fluid">
                   <div class="row">
                     <div class="col-sm-3">
-                      <label for="opgavenavn">Opgavenavn</label>
+                      <label for="arbejdsopgavenavn">Arbejdsopgavenavn</label>
                       <input
                         type="text"
                         class="form-control bg-light"
                         value=""
-                        id="opgavenavn"
+                        id="arbejdsopgavenavn"
                       />
                     </div>
                     <div class="col-sm-3">
@@ -296,7 +296,7 @@
           <div class="modal-body">
             <div class="form-group row">
               <label for="name" class="col-sm-4 col-form-label"
-                >Opgavenavn</label
+                >Arbejdsopgavenavn</label
               >
               <div class="col-sm-8">
                 <input type="text" class="form-control" id="name" />
