--- a/arkivskaber.html
+++ b/arkivskaber.html
@@ -1253,7 +1253,7 @@ of Lorem Ipsum.
                                       d="M4 12h1v1H2v-1h1v-2H2V9h2v3zm8-7.5V14c0 .55-.45 1-1 1H1c-.55 0-1-.45-1-1V2c0-.55.45-1 1-1h7.5L12 4.5zM11 5L8 2H1v12h10V5zM8 4H6v1h1v2H6v1h3V7H8V4zM2 4h3v4H2V4zm1 3h1V5H3v2zm3 2h3v4H6V9zm1 3h1v-2H7v2z"
                                     />
                                   </svg>
-                                  <span class="ml-3">Proveniens nr.</span>
+                                  <span class="ml-3">Proveniensnr.</span>
                                 </div>
                               </h4>
                             </div>
@@ -1265,7 +1265,7 @@ of Lorem Ipsum.
                               >
                                 <thead>
                                   <tr>
-                                    <th scope="col">Proveniens nr.</th>
+                                    <th scope="col">Proveniensnr.</th>
                                     <th scope="col" class="hidden"></th>
                                   </tr>
                                 </thead>
@@ -1648,31 +1648,10 @@ of Lorem Ipsum.
             <div class="form-group row">
               <label class="col-sm-4 col-form-label" for="type">Type</label>
               <div class="col-sm-8">
-                <div class="form-check-inline">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    name="typeRadio"
-                    id="type1"
-                    value="option1"
-                    checked
-                  />
-                  <label class="form-check-label" for="type1">
-                    IT-System
-                  </label>
-                </div>
-                <div class="form-check-inline">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    name="typeRadio"
-                    id="type2"
-                    value="option2"
-                  />
-                  <label class="form-check-label" for="type2">
-                    Papir
-                  </label>
-                </div>
+                <select class="form-control" id="type">
+                  <option value="itsystem">IT-System</option>
+                  <option value="papir">Papir</option>
+                </select>
               </div>
             </div>
 
@@ -1737,7 +1716,7 @@ of Lorem Ipsum.
               </div>
             </div>
             <hr />
-            <div class="itkomponent mb-3">
+            <div class="itsystem mb-3">
               <div class="form-group row">
                 <label class="col-sm-4 col-form-label" for="undertype"
                   >Undertype</label
