--- a/heuristiskenhed.html
+++ b/heuristiskenhed.html
@@ -205,6 +205,10 @@
                                 </div>
                               </div>
                             </li>
+                          </ul>
+                        </div>
+                        <div class="col-sm-6 mt-6">
+                          <ul class="list-group mb-5 mr-3 ml-3">
                             <li class="list-group-item">
                               <div class="row d-flex align-items-center">
                                 <div class="col-sm-6 font-weight-semibold">
@@ -299,7 +303,7 @@
                                 <thead>
                                   <tr>
                                     <th scope="col">HE-Navn</th>
-                                    <th scope="col">HE-Type</th>
+                                    <th scope="col">Type</th>
                                     <th scope="col" class="hidden"></th>
                                     <th scope="col" class="hidden"></th>
                                   </tr>
@@ -502,7 +506,7 @@
                               >
                                 <thead>
                                   <tr>
-                                    <th scope="col">Dannelsestid</th>
+                                    <th scope="col">Type</th>
                                     <th scope="col">Fra</th>
                                     <th scope="col">Til</th>
                                     <th scope="col" class="hidden"></th>
@@ -512,7 +516,7 @@
                                 <tbody>
                                   <tr class="readonly">
                                     <td>
-                                      FRB Politi
+                                      Dannelsestid
                                     </td>
                                     <td>1942</td>
                                     <td>1988</td>
@@ -832,7 +836,7 @@
                                 d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
                               />
                             </svg>
-                            <span>Tilføj arkivskaber</span>
+                            <span>Tilknyt arkivskaber</span>
                           </button>
                         </div>
                         <div class="col-sm-6">
@@ -1090,6 +1094,111 @@ of Lorem Ipsum.
                             </div>
                           </div>
                         </div>
+                      </div>
+                      <hr />
+                      <h4 class="font-weight-bold mt-5 ml-3 mb-3">
+                        <div class="d-flex align-items-center">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="24"
+                            height="24"
+                            viewBox="0 0 14 16"
+                          >
+                            <path
+                              fill-rule="evenodd"
+                              fill="#686868"
+                              d="M3 10h4V9H3v1zm0-2h6V7H3v1zm0-2h8V5H3v1zm10 6H1V3h12v9zM1 2c-.55 0-1 .45-1 1v9c0 .55.45 1 1 1h12c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1H1z"
+                            />
+                          </svg>
+                          <span class="ml-3">Arkiveringsversion</span>
+                        </div>
+                      </h4>
+                      <div class="row mt-3 mb-5 ml-1 mr-1">
+                        <div class="col-sm-12">
+                          <div class="card">
+                            <div class="card-body p-0 m-0">
+                              <table
+                                id="arkiveringsversion-tabel"
+                                class="table sorting table-hover table-striped mb-0"
+                                width="100%"
+                              >
+                                <thead>
+                                  <tr>
+                                    <th scope="col">HE-navn</th>
+                                    <th scope="col">Fra</th>
+                                    <th scope="col">Til</th>
+                                    <th scope="col">Første</th>
+                                    <th scope="col">Sidste</th>
+                                    <th scope="col">Plads Sti</th>
+                                    <th scope="col" class="hidden"></th>
+                                    <th scope="col" class="hidden"></th>
+                                  </tr>
+                                </thead>
+
+                                <tbody>
+                                  <tr>
+                                    <td>
+                                      <a href="/magasinenhed.html">802367816</a>
+                                    </td>
+                                    <td>VIII.b-1</td>
+                                    <td>8 cm. stort format</td>
+                                    <td>1919 10 1</td>
+                                    <td>1948</td>
+                                    <td>21+Mez5+1+101+09+04</td>
+                                    <td width="25" class="text-right">
+                                      <a href="#" class="edit icon">
+                                        <svg
+                                          xmlns="http://www.w3.org/2000/svg"
+                                          width="20"
+                                          height="20"
+                                          viewBox="0 0 20 20"
+                                        >
+                                          <path
+                                            fill="#000"
+                                            fill-rule="nonzero"
+                                            d="M18.76 4.878a10.555 10.555 0 0 0-1.59-2.026 10.563 10.563 0 0 0-2.063-1.595L16.364 0s1.818 0 2.727.91C20 1.817 20 3.635 20 3.635l-1.24 1.242zM8.181 15.455H4.545v-3.637l.437-.436a7.624 7.624 0 0 1 3.636 3.636l-.436.437zm9.527-9.528l-8.042 8.041a10.502 10.502 0 0 0-3.652-3.62l8.058-8.057a7.594 7.594 0 0 1 3.636 3.636zm-14.982-3.2v14.546h14.546v-6.364L20 8.147v10.035A1.818 1.818 0 0 1 18.182 20H1.818A1.818 1.818 0 0 1 0 18.182V1.818C0 .815.815 0 1.818 0h10.01L9.098 2.727H2.727z"
+                                          />
+                                        </svg>
+                                      </a>
+                                    </td>
+                                    <td width="25" class="text-right">
+                                      <a href="#" class="delete icon">
+                                        <svg
+                                          xmlns="http://www.w3.org/2000/svg"
+                                          width="24"
+                                          height="24"
+                                          viewBox="0 0 12 16"
+                                        >
+                                          <path
+                                            fill-rule="evenodd"
+                                            d="M11 2H9c0-.55-.45-1-1-1H5c-.55 0-1 .45-1 1H2c-.55 0-1 .45-1 1v1c0 .55.45 1 1 1v9c0 .55.45 1 1 1h7c.55 0 1-.45 1-1V5c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm-1 12H3V5h1v8h1V5h1v8h1V5h1v8h1V5h1v9zm1-10H2V3h9v1z"
+                                          />
+                                        </svg>
+                                      </a>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                            </div>
+                          </div>
+                        </div>
+                        <button
+                          class="btn btn-outline-primary edit btn-sm d-flex align-items-center mt-3 ml-3 addrow-7"
+                        >
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="12"
+                            height="16"
+                            viewBox="0 0 12 16"
+                            class="mr-2"
+                          >
+                            <path
+                              fill-rule="evenodd"
+                              d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
+                            />
+                          </svg>
+                          <span>Tilføj ny arkiveringsversion</span>
+                        </button>
                       </div>
                       <hr />
                       <h4 class="font-weight-bold mt-5 ml-3 mb-3">
@@ -1908,7 +2017,7 @@ of Lorem Ipsum.
               class="modal-title font-weight-bold"
               id="tilfoejoverordnedeaktoererModalLabel"
             >
-              Tilføj Arkivskaber
+              Tilknyt Arkivskaber
             </h5>
             <button
               type="button"
