--- a/search/search-arkivskaber.html
+++ b/search/search-arkivskaber.html
@@ -132,7 +132,7 @@
                       />
                     </div>
                     <div class="col-sm-3 mb-0">
-                      <label for="proveniensnr">Proveniens-nr.</label>
+                      <label for="proveniensnr">Proveniensnr.</label>
                       <input
                         type="text"
                         class="form-control bg-light"
@@ -290,9 +290,7 @@
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-sm-4 col-form-label" for="type"
-                >Dannelsestid</label
-              >
+              <label class="col-sm-4 col-form-label" for="type">Tid</label>
               <div class="col-sm-8">
                 <div class="form-inline row">
                   <input
@@ -307,47 +305,6 @@
                     placeholder="til"
                     id="name"
                   />
-                </div>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-sm-4 col-form-label" for="navnetype"
-                >Navnetype</label
-              >
-              <div class="col-sm-8">
-                <select class="form-control" id="navnetype">
-                  <option>Kaldenavn</option>
-                  <option>Officielt</option>
-                </select>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-sm-4 col-form-label" for="type">Kladde</label>
-              <div class="col-sm-8">
-                <div class="form-check-inline">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    name="exampleRadios"
-                    id="KladdeRadio1"
-                    value="option1"
-                    checked
-                  />
-                  <label class="form-check-label" for="KladdeRadio1">
-                    Ja
-                  </label>
-                </div>
-                <div class="form-check-inline">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    name="exampleRadios"
-                    id="KladdeRadio2"
-                    value="option2"
-                  />
-                  <label class="form-check-label" for="KladdeRadio2">
-                    Nej
-                  </label>
                 </div>
               </div>
             </div>
