--- a/magasinenhed.html
+++ b/magasinenhed.html
@@ -70,6 +70,37 @@
                 >Magasinenhed</span
               >
               <p class="mb-0 text-secondary"><strong>Stregkode</strong></p>
+              <button
+                class="btn btn-outline-primary float-right d-flex align-items-center"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 32 32"
+                  class="mr-2"
+                >
+                  <g
+                    fill="none"
+                    stroke="#FFF"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-miterlimit="10"
+                    stroke-width="2"
+                  >
+                    <path
+                      d="M649 137.999h26v18h-14M653 155.999h-4v-14M661 156l-8 6v-6"
+                    />
+                  </g>
+                  <path
+                    d="M29 13h-6V3a1 1 0 0 0-1-1H10a1 1 0 0 0-1 1v10H3a1 1 0 0 0 0 2h6v2a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2h5v10h-5v-1a1 1 0 0 0-1-1H10a1 1 0 0 0-1 1v1H4v-7a1 1 0 1 0-2 0v8a1 1 0 0 0 1 1h6v2a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2h6a1 1 0 0 0 1-1V14a1 1 0 0 0-1-1zm-8 3H11V4h10v12zm0 12H11v-3h10v3z"
+                  />
+                </svg>
+                <span>Udskriv etiket</span>
+              </button>
+              <button class="btn btn-primary float-right readonly mr-3">
+                Rediger i AIDA
+              </button>
               <h1 class="font-weight-bold">802367816</h1>
               <div class="container-fluid">
                 <div class="row mb-3 mt-3">
@@ -80,9 +111,6 @@
                       <h5 class="mb-0">
                         Beskrivelse
                       </h5>
-                      <button class="btn btn-primary float-right readonly edit">
-                        Rediger i AIDA
-                      </button>
                       <div class="float-right write">
                         <button class="btn write save">
                           Annuller
