Added jump to section and visual improvements to eksemplarer

--- a/search/search-arbejdsopgave.html
+++ b/search/search-arbejdsopgave.html
@@ -194,7 +194,7 @@
                 >
                   <thead>
                     <tr>
-                      <th scope="col">Opgavenavn</th>
+                      <th scope="col">Arbejdsopgavenavn</th>
                       <th scope="col">Ansvarlig</th>
                       <th scope="col">Dato åbnet</th>
                       <th scope="col">Dato lukket</th>
