Several fixes and added icons

--- a/arbejdsopgave.html
+++ b/arbejdsopgave.html
@@ -341,7 +341,7 @@ Nørregade 56
                             <tbody>
                               <tr class="readonly">
                                 <td>
-                                  <a href="/heuristiskenhed.html#Eksemplarer"
+                                  <a href="/heuristiskenhed.html#heeksemplarer"
                                     >FRB. Politi</a
                                   >
                                 </td>
@@ -370,7 +370,7 @@ Nørregade 56
                               </tr>
                               <tr class="readonly">
                                 <td>
-                                  <a href="/heuristiskenhed.html#Eksemplarer"
+                                  <a href="/heuristiskenhed.html#heeksemplarer"
                                     >FRB. Politi</a
                                   >
                                 </td>
