--- a/heuristiskenhed.html
+++ b/heuristiskenhed.html
@@ -845,18 +845,7 @@
                           >
                             <h4 class="font-weight-bold mt-3 ml-3 mb-4">
                               <div class="d-flex align-items-center">
-                                <svg
-                                  xmlns="http://www.w3.org/2000/svg"
-                                  width="24"
-                                  height="24"
-                                  viewBox="0 0 14 16"
-                                >
-                                  <path
-                                    fill-rule="evenodd"
-                                    fill="#686868"
-                                    d="M9 4V3c0-.55-.45-1-1-1H6c-.55 0-1 .45-1 1v1H1c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h12c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1H9zM6 3h2v1H6V3zm7 6H8v1H6V9H1V5h1v3h10V5h1v4z"
-                                  />
-                                </svg>
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 10 16"><path fill-rule="evenodd" d="M10 5c0-1.11-.89-2-2-2a1.993 1.993 0 0 0-1 3.72v.3c-.02.52-.23.98-.63 1.38-.4.4-.86.61-1.38.63-.83.02-1.48.16-2 .45V4.72a1.993 1.993 0 0 0-1-3.72C.88 1 0 1.89 0 3a2 2 0 0 0 1 1.72v6.56c-.59.35-1 .99-1 1.72 0 1.11.89 2 2 2 1.11 0 2-.89 2-2 0-.53-.2-1-.53-1.36.09-.06.48-.41.59-.47.25-.11.56-.17.94-.17 1.05-.05 1.95-.45 2.75-1.25S8.95 7.77 9 6.73h-.02C9.59 6.37 10 5.73 10 5zM2 1.8c.66 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2C1.35 4.2.8 3.65.8 3c0-.65.55-1.2 1.2-1.2zm0 12.41c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm6-8c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2z"/></svg>
                                 <span class="ml-3">Referencer</span>
                               </div>
                             </h4>
@@ -1098,18 +1087,7 @@ of Lorem Ipsum.
                       <hr />
                       <h4 class="font-weight-bold mt-5 ml-3 mb-3">
                         <div class="d-flex align-items-center">
-                          <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            width="24"
-                            height="24"
-                            viewBox="0 0 14 16"
-                          >
-                            <path
-                              fill-rule="evenodd"
-                              fill="#686868"
-                              d="M3 10h4V9H3v1zm0-2h6V7H3v1zm0-2h8V5H3v1zm10 6H1V3h12v9zM1 2c-.55 0-1 .45-1 1v9c0 .55.45 1 1 1h12c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1H1z"
-                            />
-                          </svg>
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 13 16"><path fill-rule="evenodd" d="M12.01 13c0 .59 0 1-.59 1H4.6c-.59 0-.59-.41-.59-1 0-.59 0-1 .59-1h6.81c.59 0 .59.41.59 1h.01zM4.6 4h6.81C12 4 12 3.59 12 3c0-.59 0-1-.59-1H4.6c-.59 0-.59.41-.59 1 0 .59 0 1 .59 1zm6.81 3H4.6c-.59 0-.59.41-.59 1 0 .59 0 1 .59 1h6.81C12 9 12 8.59 12 8c0-.59 0-1-.59-1zm-9.4-6h-.72c-.3.19-.58.25-1.03.34V2h.75v2.14H.17V5h2.84v-.86h-1V1zm.392 8.12c-.129 0-.592.04-.802.07.53-.56 1.14-1.25 1.14-1.89C2.72 6.52 2.18 6 1.38 6c-.59 0-.97.2-1.38.64l.58.58c.19-.19.38-.38.64-.38.28 0 .48.16.48.52 0 .53-.77 1.2-1.7 2.06V10h3v-.88h-.598zm-.222 3.79v-.03c.44-.19.64-.47.64-.86 0-.7-.56-1.11-1.44-1.11-.48 0-.89.19-1.28.52l.55.64c.25-.2.44-.31.69-.31.27 0 .42.13.42.36 0 .27-.2.44-.86.44v.75c.83 0 .98.17.98.47 0 .25-.23.38-.58.38-.28 0-.56-.14-.81-.38l-.48.66c.3.36.77.56 1.41.56.83 0 1.53-.41 1.53-1.16 0-.5-.31-.81-.77-.94v.01z"/></svg>
                           <span class="ml-3">Arkiveringsversion</span>
                         </div>
                       </h4>
@@ -1203,18 +1181,7 @@ of Lorem Ipsum.
                       <hr />
                       <h4 class="font-weight-bold mt-5 ml-3 mb-3">
                         <div class="d-flex align-items-center">
-                          <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            width="24"
-                            height="24"
-                            viewBox="0 0 14 16"
-                          >
-                            <path
-                              fill-rule="evenodd"
-                              fill="#686868"
-                              d="M3 10h4V9H3v1zm0-2h6V7H3v1zm0-2h8V5H3v1zm10 6H1V3h12v9zM1 2c-.55 0-1 .45-1 1v9c0 .55.45 1 1 1h12c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1H1z"
-                            />
-                          </svg>
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 14 16"><path fill-rule="evenodd" d="M13 2h-1v1.5c0 .28-.22.5-.5.5h-2c-.28 0-.5-.22-.5-.5V2H6v1.5c0 .28-.22.5-.5.5h-2c-.28 0-.5-.22-.5-.5V2H2c-.55 0-1 .45-1 1v11c0 .55.45 1 1 1h11c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm0 12H2V5h11v9zM5 3H4V1h1v2zm6 0h-1V1h1v2zM6 7H5V6h1v1zm2 0H7V6h1v1zm2 0H9V6h1v1zm2 0h-1V6h1v1zM4 9H3V8h1v1zm2 0H5V8h1v1zm2 0H7V8h1v1zm2 0H9V8h1v1zm2 0h-1V8h1v1zm-8 2H3v-1h1v1zm2 0H5v-1h1v1zm2 0H7v-1h1v1zm2 0H9v-1h1v1zm2 0h-1v-1h1v1zm-8 2H3v-1h1v1zm2 0H5v-1h1v1zm2 0H7v-1h1v1zm2 0H9v-1h1v1z"/></svg>
                           <span class="ml-3">Afleverings status</span>
                         </div>
                       </h4>
@@ -1507,7 +1474,7 @@ of Lorem Ipsum.
                       <div
                         class="d-flex align-items-center justify-content-between"
                       >
-                        <h4 class="font-weight-bold mt-3 ml-3 mb-4" id="Eksemplarer">
+                        <h4 class="font-weight-bold mt-3 ml-3 mb-4" id="heeksemplarer">
                           <div class="d-flex align-items-center">
                             <svg
                               xmlns="http://www.w3.org/2000/svg"
@@ -1548,7 +1515,7 @@ of Lorem Ipsum.
                           <div class="card">
                             <div class="card-body p-0 m-0">
                               <table
-                                id="eksemplar-tabel"
+                                id="heeksemplar-tabel"
                                 class="table sorting table-hover table-striped mb-0"
                                 width="100%"
                               >
@@ -1570,7 +1537,7 @@ of Lorem Ipsum.
                                     href="#collapseOne"
                                   >
                                     <td>
-                                      <a href="#">Eksx14</a>
+                                      <a href="#a">Eksx14</a>
                                     </td>
                                     <td>VIII.b-1</td>
                                     <td>8 cm. stort format</td>
@@ -1590,7 +1557,7 @@ of Lorem Ipsum.
                                     href="#collapseTwo"
                                   >
                                     <td>
-                                      <a href="#">Eksx15</a>
+                                      <a href="#b">Eksx15</a>
                                     </td>
                                     <td>VIII.b-1</td>
                                     <td>8 cm. stort format</td>
@@ -2077,11 +2044,13 @@ versions of Lorem Ipsum.
                                           </div>
                                         </div>
                                         <button
-                                          class="btn btn-outline-primary mt-3 mb-4"
+                                          class="btn btn-outline-primary mt-3 mb-4 d-flex align-items-center"
                                           data-toggle="modal"
                                           data-target="#visrelateredearbejdsopgaver"
+
                                         >
-                                          Vis relaterede arbejdsopgaver
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="mr-2" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M8.06 2C3 2 0 8 0 8s3 6 8.06 6C13 14 16 8 16 8s-3-6-7.94-6zM8 12c-2.2 0-4-1.78-4-4 0-2.2 1.8-4 4-4 2.22 0 4 1.8 4 4 0 2.22-1.78 4-4 4zm2-4c0 1.11-.89 2-2 2-1.11 0-2-.89-2-2 0-1.11.89-2 2-2 1.11 0 2 .89 2 2z"/></svg>
+                                          <span>Vis relaterede arbejdsopgaver</span>
                                         </button>
                                       </div>
                                     </div>
@@ -2577,35 +2546,35 @@ versions of Lorem Ipsum.
                     <tbody>
                       <tr>
                         <td>
-                          <a href="arbejdsopgave.html">Frederiksberg Politi</a>
+                          <a href="arbejdsopgave.html">Opgave indsamling Politi</a>
                         </td>
-                        <td>1988</td>
-                        <td>2020</td>
-                        <td>Officielt</td>
+                        <td>Mette Frederiksen</td>
+                        <td>10.10.2019</td>
+                        <td>-</td>
                       </tr>
                       <tr>
                         <td>
-                          <a href="arbejdsopgave.html">Frederiksberg Politi</a>
+                          <a href="arbejdsopgave.html">Kommune indsamling</a>
                         </td>
-                        <td>1988</td>
-                        <td>2020</td>
-                        <td>Officielt</td>
+                        <td>Jette Grønborg</td>
+                        <td>09.04.2019</td>
+                        <td>-</td>
                       </tr>
                       <tr>
                         <td>
-                          <a href="arbejdsopgave.html">Frederiksberg Politi</a>
+                          <a href="arbejdsopgave.html">Statens Museum</a>
                         </td>
-                        <td>1988</td>
-                        <td>2020</td>
-                        <td>Officielt</td>
+                        <td>Camilla Martin</td>
+                        <td>11.11.2020</td>
+                        <td>11.12.2020</td>
                       </tr>
                       <tr>
                         <td>
-                          <a href="arbejdsopgave.html">Frederiksberg Politi</a>
+                          <a href="arbejdsopgave.html">Egypten Kort</a>
                         </td>
-                        <td>1988</td>
-                        <td>2020</td>
-                        <td>Officielt</td>
+                        <td>Camilla Martin</td>
+                        <td>11.01.2020</td>
+                        <td>-</td>
                       </tr>
                     </tbody>
                   </table>
