--- a/index.html
+++ b/index.html
@@ -217,11 +217,23 @@
                       <div class="mt-5">
                         <button
                           type="button"
-                          class="btn btn-outline-primary btn-sm"
+                          class="btn btn-outline-primary btn-sm d-flex align-items-center"
                           data-toggle="modal"
                           data-target="#opretArkivskaber"
                         >
-                          + Ny arkivskaber
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="12"
+                            height="16"
+                            viewBox="0 0 12 16"
+                            class="mr-2"
+                          >
+                            <path
+                              fill-rule="evenodd"
+                              d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
+                            />
+                          </svg>
+                          <span>Ny arkivskaber</span>
                         </button>
                       </div>
                     </div>
@@ -595,11 +607,23 @@
                     <div class="m-3 mt-5">
                       <button
                         type="button"
-                        class="btn btn-outline-primary btn-sm"
+                        class="btn btn-outline-primary btn-sm d-flex align-items-center"
                         data-toggle="modal"
                         data-target="#nyarbopgave"
                       >
-                        + Ny arbejdsopgave
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="12"
+                          height="16"
+                          viewBox="0 0 12 16"
+                          class="mr-2"
+                        >
+                          <path
+                            fill-rule="evenodd"
+                            d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
+                          />
+                        </svg>
+                        <span>Ny arbejdsopgave</span>
                       </button>
                     </div>
                   </form>
