--- a/search/search-arkivskaber.html
+++ b/search/search-arkivskaber.html
@@ -161,11 +161,23 @@
                     <span>Søg</span>
                   </button>
                   <button
-                    class="ml-3 btn btn-outline-primary"
+                    class="ml-3 btn btn-outline-primary d-flex align-items-center"
                     data-toggle="modal"
                     data-target="#opretArkivskaber"
                   >
-                    <span>+ Ny arkivskaber</span>
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="12"
+                      height="16"
+                      viewBox="0 0 12 16"
+                      class="mr-2"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
+                      />
+                    </svg>
+                    <span>Ny arkivskaber</span>
                   </button>
                 </div>
               </div>
